--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary_color">#2196F3</color>
-    <color name="primary_dark">#1976D2</color>
-    <color name="accent_color">#FF4081</color>
+    <color name="primary_color">#673AB7</color>
+    <color name="primary_dark">#512DA8</color>
+    <color name="accent_color">#7C4DFF</color>
     <color name="ripple_color">#40FFFFFF</color>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="backgroundStart">#F5F7FA</color>
+    <color name="colorPrimary">#673AB7</color>
+    <color name="colorPrimaryDark">#512DA8</color>
+    <color name="colorAccent">#7C4DFF</color>
+    <color name="backgroundStart">#EDE7F6</color>
     <color name="backgroundEnd">#E4E7EB</color>
 </resources>
