--- a/app/src/main/res/layout/fragment_teacher_detail.xml
+++ b/app/src/main/res/layout/fragment_teacher_detail.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".TeacherDetailFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
@@ -24,117 +26,92 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="80dp"> 
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <TextView
-                android:id="@+id/tvTeacherName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="教师姓名"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvTeacherCollege"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="所属学院"
-                app:layout_constraintStart_toStartOf="@+id/tvTeacherName"
-                app:layout_constraintTop_toBottomOf="@+id/tvTeacherName" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-            <RatingBar
-                android:id="@+id/rbAverageRating"
-                style="?android:attr/ratingBarStyleIndicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:rating="4.5"
-                app:layout_constraintStart_toStartOf="@+id/tvTeacherCollege"
-                app:layout_constraintTop_toBottomOf="@+id/tvTeacherCollege" />
+                    <TextView
+                        android:id="@+id/tvTeacherName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="教师姓名"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
-            <Button
-                android:id="@+id/btnSubmitRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="提交我的评分"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tvTeacherName"
-                app:layout_constraintBottom_toBottomOf="@+id/rbAverageRating"
-                android:layout_marginEnd="16dp"/>
+                    <TextView
+                        android:id="@+id/tvTeacherTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="职称"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="16dp"
-                android:background="?android:attr/dividerHorizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rbAverageRating" />
+                    <TextView
+                        android:id="@+id/tvTeacherDepartment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="部门"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+                    <TextView
+                        android:id="@+id/tvTeacherResearchArea"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="研究领域"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+
+                    <RatingBar
+                        android:id="@+id/rbAverageRating"
+                        style="?android:attr/ratingBarStyleIndicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:isIndicator="true"
+                        android:numStars="5"
+                        android:stepSize="0.1" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/tvCommentsTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="评论区"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="@+id/tvTeacherName"
-                app:layout_constraintTop_toBottomOf="@+id/divider"/>
+                android:layout_marginTop="24dp"
+                android:text="评价列表"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvComments"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:nestedScrollingEnabled="false"
-                app:layout_constraintTop_toBottomOf="@+id/tvCommentsTitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                tools:listitem="@layout/item_evaluation" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:orientation="horizontal"
-        android:layout_gravity="bottom"
-        android:background="@color/cardview_light_background">
-
-        <Button
-            android:id="@+id/btnLike"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="点赞" />
-
-        <Button
-            android:id="@+id/btnComment"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="评论" />
-
-        <Button
-            android:id="@+id/btnFavorite"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="收藏" />
-    </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_comment"
+        app:backgroundTint="?attr/colorPrimary"
+        app:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
